Fixed spacing

--- a/docs/styles/roster.css
+++ b/docs/styles/roster.css
@@ -19,9 +19,9 @@
 h3 {
   font-size: 20px;
   font-weight: bold;
-  margin-top: 20px;
 }
 
 .picture {
   border-radius: 50%;
+  margin-bottom: 20px;
 }
